<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingCart">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_text_item"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:text="Item" />

            <TextView
                android:id="@+id/label_text_qty"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:text="QTY" />

            <TextView
                android:id="@+id/label_text_price"
                android:layout_width="50dp"
                android:layout_height="28dp"
                android:text="Price" />

            <TextView
                android:id="@+id/label_text_amount"
                android:layout_width="50dp"
                android:layout_height="28dp"
                android:text="TextView"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item1"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:text="@string/text_item1" />

            <TextView
                android:id="@+id/qty1"
                android:layout_width="30dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/text_qty1" />

            <TextView
                android:id="@+id/price1"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/text_price1" />

            <TextView
                android:id="@+id/amount1"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/text_amount1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item2"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:text="@string/text_item2" />

            <TextView
                android:id="@+id/qty2"
                android:layout_width="30dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/text_qty2" />

            <TextView
                android:id="@+id/price2"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/text_price1" />

            <TextView
                android:id="@+id/amount2"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/text_amount2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item3"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:text="@string/text_item3" />

            <TextView
                android:id="@+id/qty3"
                android:layout_width="30dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/text_qty3" />

            <TextView
                android:id="@+id/price3"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/text_price3" />

            <TextView
                android:id="@+id/amount3"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/text_amount3" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check Out"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="501dp" />

    <Button
        android:id="@+id/btn_modify"
        android:layout_width="101dp"
        android:layout_height="0dp"
        android:text="Modify"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="555dp" />


</androidx.constraintlayout.widget.ConstraintLayout>